objects/ServiceAppointment.object
<CustomObject>
    <fields>
        <fullName>Asset_SA__c</fullName>
        <description>To store asset value from service order to hover on appointment</description>
        <formula>Service_Order__r.Asset.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_ServiceResource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned  Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Branch_Address__c</fullName>
        <formula>ServiceTerritory.Street + BR() + 
 ServiceTerritory.City + BR() + 
ServiceTerritory.State + BR() + 
ServiceTerritory.Country  + BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Phone__c</fullName>
        <description>Created for SA notifications</description>
        <formula>ServiceTerritory.Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CICO_No_Login__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field made true when SA is  in status dispatched and AR has not clocked in within 5mins from scheduled start time of SA</description>
        <label>CICO No Login</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clocked__c</fullName>
        <formula>IF(CONTAINS(Service_Order__r.Clock_In_User_Ids_Formula__c, $User.Id), &quot;Clocked-In&quot;, &quot;&quot;)</formula>
        <label>Clocked</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatched_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dispatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERP_WO_SA__c</fullName>
        <description>To store ERO WO from service order to hover on appointment</description>
        <formula>Service_Order__r.Shop_Work_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP WO #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extend_Scheduled_EndDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extend Scheduled EndDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extend_Scheduled_End__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extend Scheduled End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Branch_Code__c</fullName>
        <formula>LEFT(ServiceTerritory.FSL_Service_Territory_Code__c,5)</formula>
        <label>Branch Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Parent_Crew_SA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FSL Parent Crew SA</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Service Appointments (FSL Parent Crew SA)</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL_Passedschtime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSL_Passedschtime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL_Scheduled_Plus_5__c</fullName>
        <formula>SchedStartTime  + (5 / 1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSL Scheduled Plus 5</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSL_Timesheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To map the SA record with Internal Job ClockIn Timesheet entry</description>
        <label>FSL Timesheet</label>
        <referenceTo>FSL_Timesheet__c</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL_Unit_Number__c</fullName>
        <description>To store unit number from service order (asset) to hover on appointment</description>
        <formula>Service_Order__r.Asset.Unit_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Appointment_Grade__c</fullName>
        <label>Appointment Grade</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Auto_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Duration_In_Minutes__c</fullName>
        <formula>IF (ISBLANK(SchedStartTime), 0, (SchedEndTime - SchedStartTime)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration In Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Emergency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emergency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__GanttColor__c</fullName>
        <label>Gantt Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__GanttIcon__c</fullName>
        <inlineHelpText>Enter a URL for an icon. The URL must end in an image suffix, such as .png.</inlineHelpText>
        <label>Gantt Icon</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Gantt_Display_Date__c</fullName>
        <label>Gantt Display Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSL__InJeopardyReason__c</fullName>
        <label>In Jeopardy Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delayed Start</fullName>
                </value>
                <value>
                    <fullName>Delayed Finish</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Due Date Approaching</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__InJeopardy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Jeopardy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__InternalSLRGeolocation__c</fullName>
        <label>Internal SLR Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__IsMultiDay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is MultiDay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Last_Updated_Epoch__c</fullName>
        <label>Last Updated Epoch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__MDS_Calculated_length__c</fullName>
        <label>Multiday Work Calculated length</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__MDT_Operational_Time__c</fullName>
        <label>Multiday Work Operational Time</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__Pinned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pinned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Prevent_Geocoding_For_Chatter_Actions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Geocoding For Chatter Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Related_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Service</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Same_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Schedule_Mode__c</fullName>
        <label>Schedule Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Optimization</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Schedule_over_lower_priority_appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedule Over Lower Priority Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Scheduling_Policy_Used__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduling Policy Used</label>
        <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Time_Dependency__c</fullName>
        <label>Time Dependency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same Start</fullName>
                </value>
                <value>
                    <fullName>Start After Finish</fullName>
                </value>
                <value>
                    <fullName>Finish Before Start</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__UpdatedByOptimization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdatedByOptimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Use_Async_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Async Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Virtual_Service_For_Chatter_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Service For Chatter Action (SLR)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formatted_Scheduled_Start__c</fullName>
        <description>Scheduled Date Formatted to User Locale</description>
        <label>Formatted Scheduled Start</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Symptoms__c</fullName>
        <label>General Symptoms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_AppointMent_Flag__c</fullName>
        <formula>OR(Is_a_Bay_Area_Appointment__c,Is_a_Tech_Appointment__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is AppointMent Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_a_Bay_Area_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is a Bay Area Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_a_Tech_Appointment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is a Tech Appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MR_Creation_Status__c</fullName>
        <description>Draft = working on the record
Deleted = marked for deleting
Updated = change dates
ChangeTech = change technician</description>
        <inlineHelpText>Draft = working on the record
Deleted = marked for deleting
Updated = change dates
ChangeTech = change technician</inlineHelpText>
        <label>MR Create/Update Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                    <default>true</default>
                    <label>Confirmed</label>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>ChangeTech</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MR_Parent_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field stores the work order id that ultimately owns this work order. If this solution ultimately allows WOLIs to own SAs, this relationship provides a view of all SAs for the WO regardless of whether they are directly or indirectly owned by the WO.</description>
        <label>MR Parent Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_AppointmentsMR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MR_Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the selected resource for the service appointment. It is used to ultimately create the assigned resource record.</description>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_AppointmentsMR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overdue_Alert_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To determine whether overdue alter sent or not</description>
        <label>Overdue Alert Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSN_Unit__c</fullName>
        <description>Created for SA notifications</description>
        <formula>IF(ISBLANK( Service_Order__r.AssetId), &quot;&quot;, &quot;ESN: &quot;+Service_Order__r.Engine_Serial_Number__c + &quot; and Unit: &quot; + Service_Order__r.Asset.Unit_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSN Unit #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_Date_Time_FX__c</fullName>
        <description>used to determine if SA scheduled start date/time is in the past, present or future; if the field returns a value of 0 that is equal to today, if it returns a negative # that is equal to tomorrow or in the future, and a positive value is equal to yesterday or earlier (past)</description>
        <formula>Today()- DATEVALUE(SchedStartTime)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SA Date/Time FX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SA_Duration_Check_In_Mins__c</fullName>
        <formula>ABS((SchedEndTime - NOW())*24*60)</formula>
        <label>SA Duration Check in Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Clock_In_User_Ids__c</fullName>
        <formula>Service_Order__r.Clock_In_User_Ids_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SO Clock In User Ids</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SR_Clocked_In__c</fullName>
        <formula>CONTAINS(Service_Order__r.Clock_In_User_Ids_Formula__c, User__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SR Clocked In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule_Date_Time__c</fullName>
        <formula>TEXT(DATEVALUE(SchedStartTime)) + &quot; &quot; + LEFT(TEXT(TIMEVALUE(SchedStartTime)), 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Schedule Date Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order_Address__c</fullName>
        <description>Created for SA notifications</description>
        <formula>IF(LEN(Service_Order__r.Street)&gt;0, Service_Order__r.Street&amp; &quot;, &quot; , &quot;&quot; )&amp;
IF(LEN(Service_Order__r.City)&gt;0, Service_Order__r.City&amp; &quot; &quot; , &quot;&quot; )&amp;
IF(LEN(Service_Order__r.State)&gt;0, Service_Order__r.State&amp; &quot; &quot;,&quot;&quot;) &amp;
IF(LEN(Service_Order__r.PostalCode) &gt;0, Service_Order__r.PostalCode,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Order Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order_Num__c</fullName>
        <formula>Service_Order__r.Account.Name + &quot; • &quot; + &quot;Job# &quot; +Service_Order__r.WorkOrderNumber + &quot; • &quot; + &quot;ERP# &quot; +  Service_Order__r.Shop_Work_Order__c + &quot; • &quot; + &quot;Unit# &quot; + Service_Order__r.Asset.Unit_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Order#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TS_Clocked_Out_Flag__c</fullName>
        <formula>IF( ISNULL(Timesheet__r.EndTime__c) , FALSE, TRUE)</formula>
        <label>TS Clocked Out Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <formula>ServiceTerritory.Name</formula>
        <label>Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timesheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet</label>
        <referenceTo>FSL_Timesheet__c</referenceTo>
        <relationshipLabel>Service Appointments (Timesheet)</relationshipLabel>
        <relationshipName>TS_Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_ServiceAppointments</fullName>
        <columns>Name</columns>
        <columns>ParentRecord</columns>
        <columns>ParentRecordType</columns>
        <columns>Status</columns>
        <columns>ArrivalWindowStartTime</columns>
        <columns>ArrivalWindowEndTime</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Appointments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_ServiceAppointments</fullName>
        <filterScope>Everything</filterScope>
        <label>All Service Appointments</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceAppointments</fullName>
        <filterScope>Mine</filterScope>
        <label>My Service Appointments</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceAppointments</fullName>
        <filterScope>Mine</filterScope>
        <label>My Service Appointments</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FSL_Earliest_Start_Permittedfortech</fullName>
        <active>true</active>
        <errorConditionFormula>($Profile.Name = &quot;CSS_Service_Technician&quot;) &amp;&amp;  ISCHANGED(EarliestStartTime)</errorConditionFormula>
        <errorDisplayField>EarliestStartTime</errorDisplayField>
        <errorMessage>Technician cannot change Earliest Start Permitted</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_Technician_cannot_change_Due_Date</fullName>
        <active>true</active>
        <errorConditionFormula>($Profile.Name = &quot;CSS_Service_Technician&quot;) &amp;&amp; ISCHANGED(DueDate)</errorConditionFormula>
        <errorDisplayField>DueDate</errorDisplayField>
        <errorMessage>Technician cannot change Due Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_Technician_cannot_change_status</fullName>
        <active>false</active>
        <errorConditionFormula>($Profile.Name = &quot;CSS_Service_Technician&quot;) &amp;&amp; ISCHANGED(Status)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Technician cannot change Status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL_Updates_to_Completed_SA</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; (ISPICKVAL(PRIORVALUE(Status), &quot;Completed&quot;) || ISPICKVAL(PRIORVALUE(Status), &quot;Canceled&quot;))</errorConditionFormula>
        <errorMessage>Completed &amp; Cancelled Service Appointments cannot be modified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Dont_allow_scheduled_or_dispatched</fullName>
        <active>false</active>
        <description>Don&apos;t allow creation of service with status scheduled or  dispatched</description>
        <errorConditionFormula>AND($Setup.FSL__Service_Creation_Validation_Rules__c.FSL__Service_Creation_Status_Validation__c,AND(ISNEW(),(OR(ISPICKVAL(StatusCategory, &quot;Scheduled&quot;),ISPICKVAL(StatusCategory, &quot;Dispatched&quot;)))))</errorConditionFormula>
        <errorMessage>New service appointment cannot be created in scheduled or  dispatched statuses.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Related_Service_with_time_dependency</fullName>
        <active>true</active>
        <description>If related service is not empty then time dependency is not empty</description>
        <errorConditionFormula>( !ISBLANK(FSL__Related_Service__c) &amp;&amp; ( ISBLANK(TEXT(FSL__Time_Dependency__c)) &amp;&amp; !FSL__Same_Day__c &amp;&amp; !FSL__Same_Resource__c ) )</errorConditionFormula>
        <errorMessage>Select a valid dependency type. If the appointments must be assigned to the same resource, the dependency type can’t be Same Start.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Same_Resource_Same_Start</fullName>
        <active>true</active>
        <description>Can&apos;t be same start and same reosurce</description>
        <errorConditionFormula>TEXT(FSL__Time_Dependency__c) = &quot;Same Start&quot; &amp;&amp; FSL__Same_Resource__c</errorConditionFormula>
        <errorMessage>Resource dependency is invalid. Time Dependency can&apos;t be Same Start when same resource is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Schedule_End_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(SchedEndTime) &amp;&amp; NOT(ISNULL(SchedStartTime))</errorConditionFormula>
        <errorDisplayField>SchedEndTime</errorDisplayField>
        <errorMessage>Both scheduled start and end are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Schedule_Start_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(SchedStartTime) &amp;&amp; NOT(ISNULL(SchedEndTime))</errorConditionFormula>
        <errorDisplayField>SchedStartTime</errorDisplayField>
        <errorMessage>Both scheduled start and end are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Service_Color_HEX_Format</fullName>
        <active>true</active>
        <errorConditionFormula>(!ISBLANK(FSL__GanttColor__c)) &amp;&amp; (NOT(REGEX(FSL__GanttColor__c, &quot;#[a-fA-F0-9]{6}&quot;)))</errorConditionFormula>
        <errorDisplayField>FSL__GanttColor__c</errorDisplayField>
        <errorMessage>Gantt color must be in hexadecimal format: (for example: #ffffff)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Time_dependency_with_related_service</fullName>
        <active>true</active>
        <errorConditionFormula>( ISBLANK(FSL__Related_Service__c) &amp;&amp; ( !ISBLANK(TEXT(FSL__Time_Dependency__c)) ||  FSL__Same_Day__c || FSL__Same_Resource__c ) )</errorConditionFormula>
        <errorDisplayField>FSL__Related_Service__c</errorDisplayField>
        <errorMessage>Please select Related Service.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__isDueDateExist</fullName>
        <active>false</active>
        <description>Check if DueDate field exist on service appointment.</description>
        <errorConditionFormula>ISNULL(  DueDate )</errorConditionFormula>
        <errorDisplayField>DueDate</errorDisplayField>
        <errorMessage>DueDate field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__isDurationExist</fullName>
        <active>true</active>
        <description>Check if Duration field exist on service appointment.</description>
        <errorConditionFormula>ISNULL(Duration)</errorConditionFormula>
        <errorDisplayField>Duration</errorDisplayField>
        <errorMessage>Duration field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__isEarliestStartTimeExist</fullName>
        <active>false</active>
        <description>Check if EarliestStartTime field exist on service appointment.</description>
        <errorConditionFormula>ISNULL( EarliestStartTime )</errorConditionFormula>
        <errorDisplayField>EarliestStartTime</errorDisplayField>
        <errorMessage>EarliestStartTime field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__startTimeShouldPrecedeEndTime</fullName>
        <active>false</active>
        <errorConditionFormula>SchedEndTime &lt;=  SchedStartTime</errorConditionFormula>
        <errorDisplayField>SchedStartTime</errorDisplayField>
        <errorMessage>The Scheduled Start must be earlier than the Scheduled End.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_Service_Appointment_should_be_None</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISNEW() ,  NOT( ISPICKVAL( Status , &apos;None&apos; ) ) )</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>Please select &apos;None&apos; Status to create New Service Appointment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Order_must_have_ERP_Work_Order</fullName>
        <active>true</active>
        <description>Service Order must have ERP Work Order Number to dispatch.</description>
        <errorConditionFormula>AND(
  ISCHANGED (Status),
  TEXT(Status)  =  &quot;Dispatched&quot;,
  ISBLANK(Service_Order__r.Shop_Work_Order__c)
   )</errorConditionFormula>
        <errorMessage>Service Order must have ERP Work Order Number before it can be dispatched.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Order_must_have_Work_Type</fullName>
        <active>true</active>
        <description>Service Order must have Work Type</description>
        <errorConditionFormula>ISNEW() &amp;&amp;  ISBLANK(Service_Order__r.WorkType.Name)</errorConditionFormula>
        <errorMessage>Service Order must have Work Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_ASR_on_Status_Update</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED( Dispatched_Checkbox__c ), Dispatched_Checkbox__c == true,  ISBLANK( Assigned_ServiceResource__c ) )</errorConditionFormula>
        <errorMessage>Service resource should not be blank</errorMessage>
    </validationRules>
</CustomObject>